<resources>
    <string name="app_name">值乎Live</string>
    <string name="hint_user_name">用户名2~10个字符</string>
    <string name="hint_password">密码6~18位</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="login_success">登录成功</string>
    <string name="register_success">注册成功</string>
    <string name="welcome">欢迎来到值乎Live</string>
    <string name="warn_user_name">用户名过短</string>
    <string name="warn_password">密码过短</string>
    <string name="logining">登录中</string>
    <string name="no_net_work">没有网络连接</string>
    <string name="create_live">创建Live</string>
    <string name="class_look">分类浏览</string>
    <string name="class_and_major">课程与专题</string>
    <string name="hot_better">热门精选</string>
    <string name="my_subscrib">我的订阅</string>
    <string name="my_live">我的Live</string>
    <string name="live_title">我是Live题目</string>
    <string name="live_desc">我是live简介</string>
    <string name="live_speaker_name">我是主讲人的名字</string>
    <string name="live_speaker_desc">我是主讲人简介</string>
    <string name="live_desc_real">Live简介</string>
    <string name="live_join">立即参与</string>
    <string name="live_outline">Live章节</string>
    <string name="live_outline_desc">我是Live章节</string>
    <string name="live_join_desc">XX等XX人喜欢，XXX人感兴趣</string>
    <string name="login_hint">你已经登录，具体操作未实现</string>
    <string name="all_live">全部Live</string>
    <string name="conv_error">抱歉,未找到群组,请稍后重试</string>
    <string name="objectId_error">抱歉,获取用户信息失败(可能尚未登录),请稍后重试</string>
    <string name="live_group_name">Live群组名称</string>
    <string name="quit_group_tip">你真的要离开该Live群吗？</string>
    <string name="quit_group_sure">退出</string>
    <string name="quit_group_success">你已经成功退出该群</string>
    <string name="quit_group_cancel">取消</string>
    <string name="group_detail">详情</string>
    <string name="group_name">Live群名</string>
    <string name="group_new_name">新的Live群名</string>
    <string name="group_modify">修改Live群名</string>
    <string name="sure">确定</string>
    <string name="modify_success">修改成功</string>
    <string name="add_member">正在加入该Live群</string>
    <string name="is_add">您还不是该Live群成员，确认加入该Live群吗？</string>
    <string name="add_success">加入Live群成功</string>
    <string name="member_name">成员名字</string>
    <string name="not_member_quit">对不起,非Live群成员不能参加Live</string>
    <string name="input_title">请输入Live主题(标题)</string>
    <string name="title_text">Live标题</string>
    <string name="input_name">请输入主讲人姓名</string>
    <string name="name_text">主讲人姓名</string>
    <string name="input_intro">请输入主讲人介绍</string>
    <string name="intro_text">主讲人简介</string>
    <string name="input_desc">请输入Live简介</string>
    <string name="desc_text">Live简介</string>
    <string name="input_outline">请输入Live章节</string>
    <string name="outline_text">Live章节</string>
    <string name="live_commit">马上创建Live</string>
    <string name="image_can_not_null">Live图片不能为空</string>
    <string name="title_can_not_null">Live题目不能为空</string>
    <string name="name_can_not_null">主讲人姓名不能为空</string>
    <string name="intro_can_not_null">主讲人介绍不能为空</string>
    <string name="desc_can_not_null">Live简介不能为空</string>
    <string name="outline_can_not_null">Live章节不能为空</string>
    <string name="create_live_success">创建Live成功</string>
    <string name="create_live_fail">创建Live失败,请稍后重试</string>
    <string name="user_name">用户姓名</string>
    <string name="my_join_live">我加入的Live</string>
    <string name="my_create_live">我主讲的Live</string>
</resources>
