<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.grantsome.valuelive.activity.MyLiveActivity">

    <include layout="@layout/toolbar_my_live"/>

    <android.support.v7.widget.CardView
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/username_layout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_avatar"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_width="40dp"
                android:layout_height="40dp"/>

            <TextView
                android:id="@+id/username_tv"
                android:paddingLeft="5dp"
                android:layout_marginTop="23dp"
                android:text="@string/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/join_layout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/ic_stars_gray_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/my_join_live_tv"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="23dp"
                android:text="@string/my_join_live"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <View
                android:layout_marginLeft="-85dp"
                android:layout_marginTop="55dp"
                android:layout_width="310dp"
                android:layout_height="1dp"
                android:background="@color/colorGray"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/create_layout"
            android:layout_marginTop="60dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/ic_mouse_gray_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/my_create_live"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="23dp"
                android:text="@string/my_create_live"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
